<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Glyph Interface settings -->
    <string name="glyph_title">Glyph Interface</string>
    <string name="glyph_enable">Use Glyph Interface</string>
    <string name="glyph_brightness_title">Brightness</string>
    <string name="glyph_charging_title">Charging</string>
    <string name="glyph_charging_meter_enable_title">Charging meter</string>
    <string name="glyph_charging_meter_summary">Display current battery level when charging</string>
</resources>
