<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/glyph_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="glyph_enable"
        android:title="@string/glyph_enable" />

    <SeekBarPreference
        android:key="glyph_brightness"
        android:title="@string/glyph_brightness_title"
        android:max="4095"
        android:defaultValue="1365" />

    <PreferenceCategory
        android:key="glyph_charging"
        android:title="@string/glyph_charging_title">

        <SwitchPreference
            android:key="glyph_charging_meter"
            android:defaultValue="false"
            android:title="@string/glyph_charging_meter_enable_title"
            android:summary="@string/glyph_charging_meter_summary" />
    </PreferenceCategory>
</PreferenceScreen>
